[package]
name = "tokio-too-busy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "time"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
axum = "0.7.5"

[build]
rustflags = ["--cfg", "tokio_unstable"]
