[package]
name = "tokio-too-busy"
version = "0.1.0"
edition = "2021"
description = "Identify when the Tokio workers are too busy to handle more work"
license = "MIT"
repository = "https://github.com/pfreixes/tokio-too-busy"
authors = ["pfreixes"]

[dependencies]
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "time"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
axum = "0.7.5"

[build]
rustflags = ["--cfg", "tokio_unstable"]

[lib]
doctest = false
